# ai-development

./: .env  .env.dev  .gitignore  Dockerfile  LICENSE  README.md  dev.env  docker-compose.yml  pyproject.toml  replace.sh  start_services.sh
ai_development/: ai_development.py
docker/.envs/: dev.env
docker/python/: Dockerfile  README.md  requirements.txt
private/: api_keys.env  api_keys_TEMPLATE.json
src/ai_development/: __init__.py  data_model.py  generic.py  service.py
src/ai_development/resources/html/: index.html
src/ai_development/resources/templates/: list_files.html
tests/: conftest.py  test_generic.py
tests/ai_development/: test_health.py
