[project]
name = "ai_development"
version = "0.0.1"
authors = [
  { name="André Pankraz", email="andre@pankraz.de" },
]
description = "Generic AI development blueprint project"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi",
  "jinja2",
  "transformers",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "black",
  "httpx",
  "jupyter",
  "pytest-asyncio",
]

[project.urls]
"Homepage" = "https://github.com/andrePankraz/ai-development"
"Bug Tracker" = "https://github.com/andrePankraz/ai-development/issues"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s --log-cli-level=DEBUG"
pythonpath = "src/"
testpaths = [
    "tests"
]
